[project]
name = "mutimodel-heart"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-multipart>=0.0.21",
    "resampy>=0.4.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "tensorflow>=2.20.0",
    "uvicorn[standard]>=0.40.0",
]
